# godot-template

./: .clang-format  .codespellrc  .combo.yaml  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Greeter.html  Greeter.pck  Justfile  LICENSE.md  Makefile  README.md  RELEASING.md  bump_version.sh  default_env.tres  export_presets.cfg  generate_credits.py  index.html  index.pck  mkdocs.yml  plug.gd  project.godot  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/actions/download-artifact/: action.yml
.github/actions/export-game/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: appimage-build.yml  build.yml  changelog_verifier.yml  dependabot_pr.yml  links.yml  lint_pr_title.yml  pre-commit.yaml  publish.yml  release-packaging.yml  renovate.yml  reuse.yaml  snapcraft-build.yaml
.reuse/: dep5
addons/export-build-info/: build_info.gd  export_plugin.gd  label.gd  plugin.cfg  plugin.gd
addons/fps_graph_overlay/: FPSGraphOverlay.gd  FPSGraphOverlay.tscn  README.md  plugin.cfg  plugin.gd
addons/zylann.debug_draw/: LICENSE.md  debug_draw.gd
assets/: icon.png.import  icon.png.license
docs/: SUMMARY.md  index.md
public/: .gitignore
public/packaging/: org.mechanicalflower.Greeter.desktop
resources/: circle_pixel_material.tres  default_bus_layout.tres
resources/materials/: circle_pixel_material.tres
scenes/: main.tscn  menu.tscn
scripts/: greeter.gd  menu.gd
scripts/framework/: global_signal.gd  helper.gd
shaders/: circle_pixel.gdshader  circle_pixel.shader
(+2 files in other folders)
