[tool.poetry]
name = "godot_helper"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Florian Vazelle <florian.vazelle@vivaldi.net>"]
readme = ["README.md", "LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
reuse = "^2.1.0"
gdtoolkit = "==4.*"

[tool.poetry.scripts]
generate_credits = "generate_credits:main"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[tool.codespell]
skip = 'assets/**,addons/**'
ignore-words-list = 'lod,LOD'

[tool.bandit]
exclude_dirs = ['tests']
